Add RecipesLoaderFromDB and confirm it is working (maybe). Need to insert some data into the db and try.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BakingTime</string>
+
+    <string name="exception_unknown_id_placeholder">Unknown id: %d</string>
 </resources>
