--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="log_on_start_loading_from_db_loader">onstartloading from db loader</string>
     <string name="log_load_in_background_from_db_loader">loadinbackground from db loader</string>
     <string name="log_deliver_result_from_db_loader">deliverresult from db loader</string>
+    <string name="log_number_of_recipes_loaded_placeholder">%d number of recipes loaded</string>
 
     <string name="url_baking_recipe">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/5907926b_baking/baking.json</string>
 
