--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="url_baking_recipe">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/5907926b_baking/baking.json</string>
 
     <string name="encoding_backing_recipe_webpage" translatable="false">UTF-16</string>
+
+    <string name="text_servings_placeholder">Servings: %d</string>
 </resources>
