Click recipe list item to go to RecipeDetailActivity - very basic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="encoding_backing_recipe_webpage" translatable="false">UTF-16</string>
 
     <string name="text_servings_placeholder">Servings: %d</string>
+    <string name="text_ingredients">Ingredients</string>
 </resources>
