--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
 
     <string name="text_servings_placeholder">Servings: %d</string>
     <string name="text_ingredients">Ingredients</string>
+    <string name="text_ingredient_placeholder">%1$d %2$s : %3$d %4$s</string>
 </resources>
