--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="text_ingredients">Ingredients</string>
     <string name="text_ingredient_placeholder">%1$d %2$s : %3$d %4$s</string>
     <string name="text_step_placeholder">%1$d. %2$s</string>
+    <string name="text_choose_recipe">Choose recipe</string>
 
     <string name="content_description_drawer_open">Drawer open</string>
     <string name="content_description_drawer_close">Drawer close</string>
