--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
 
     <string name="content_description_drawer_open">Drawer open</string>
     <string name="content_description_drawer_close">Drawer close</string>
+
+    <string name="toast_really_exit_app">Really wanna quit?</string>
 </resources>
