--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="text_ingredient_placeholder">%1$d %2$s : %3$d %4$s</string>
     <string name="text_step_placeholder">%1$d. %2$s</string>
     <string name="text_choose_recipe">Choose recipe</string>
+    <string name="text_previous_button">Previous</string>
+    <string name="text_next_button">Next</string>
 
     <string name="content_description_drawer_open">Drawer open</string>
     <string name="content_description_drawer_close">Drawer close</string>
