--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="text_choose_recipe">Choose recipe</string>
     <string name="text_previous_button">Previous</string>
     <string name="text_next_button">Next</string>
+    <string name="text_broken_video">URL either does not exist or is broken</string>
 
     <string name="content_description_drawer_open">Drawer open</string>
     <string name="content_description_drawer_close">Drawer close</string>
