--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="text_broken_video">URL either does not exist or is broken</string>
     <string name="text_no_internet">No internet connection</string>
     <string name="text_appwidget_ingredients_empty">No Ingredients!!</string>
+    <string name="text_error_loading_from_internet">Error loading from internet</string>
+    <string name="text_error_loading_from_db">No data in db!\nConnect to internet to load data from internet!</string>
 
     <string name="content_description_drawer_open">Drawer open</string>
     <string name="content_description_drawer_close">Drawer close</string>
