--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
 
     <string name="text_servings_placeholder">Servings: %d</string>
     <string name="text_ingredients">Ingredients</string>
-    <string name="text_ingredient_placeholder">%1$d %2$s : %3$d %4$s</string>
+    <string name="text_ingredient_placeholder">%1$d. %2$s : %3$d %4$s</string>
     <string name="text_widget_ingredient_placeholder">%1$s : %2$d %3$s</string>
     <string name="text_step_placeholder">%1$d. %2$s</string>
     <string name="text_choose_recipe">Choose recipe</string>
