--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,7 @@
 
     <string name="text_servings_placeholder">Servings: %d</string>
     <string name="text_ingredients">Ingredients</string>
-    <string name="text_ingredient_placeholder">%1$d. %2$s : %3$d %4$s</string>
-    <string name="text_widget_ingredient_placeholder">%1$s : %2$d %3$s</string>
+    <string name="text_ingredient_placeholder">%1$s : %2$d %3$s</string>
     <string name="text_step_placeholder">%1$d. %2$s</string>
     <string name="text_choose_recipe">Choose recipe</string>
     <string name="text_previous_button">Previous</string>
@@ -30,6 +29,7 @@
     <string name="text_appwidget_ingredients_empty">No Ingredients!!</string>
     <string name="text_error_loading_from_internet">Error loading from internet</string>
     <string name="text_error_loading_from_db">No data in db!\nConnect to internet to load data from internet!</string>
+    <string name="text_widget_pick_recipe">Pick a recipe!!</string>
 
     <string name="content_description_drawer_open">Drawer open</string>
     <string name="content_description_drawer_close">Drawer close</string>
